# savant

./: .gitignore  .markdownlint.json  CHANGELOG.md  Cargo.toml  ECHO.md  LICENSE  MIGRATION.md  NOTICE  README.md  STARTER-PROMPT.md  index.html  next.config.mjs  package-lock.json  package.json  playwright.config.ts  protocol.config.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
coding-standards/: doc-drift-lint.md  release-workflow.md  typescript.md  x402.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cli.rs  lib.rs  main.rs
crates/cli/src/commands/: mod.rs
crates/cli/src/runtime_helpers/: browser.rs  mod.rs  port.rs  process.rs  signal.rs
crates/cli/tests/: cli_smoke_test.rs
crates/sandbox/src/: lib.rs
dev/: .tmp-v0.0.7-release.txt  LEARNINGS.md
dev/fids/: FID-2026-07-14-035-master-strangler-fig-impl-order.md
dev/fids/archive/: 0001-ui-first-phase.md  0002-initial-release.md  FID-2026-07-12-004-DRIFT-REJECTED-workspace-savant-system.md  FID-2026-07-12-004r2-DRIFT-REJECTED-workspace-savant.md  FID-2026-07-12-005-DRIFT-REJECTED-soul-manifest-dashboard-feature.md  FID-2026-07-12-005r2-DRIFT-REJECTED-soul-manifest-dashboard.md  FID-2026-07-13-0007-manifest-page-split.md  FID-2026-07-13-006-DRIFT-REJECTED-soul-manifest-and-workspace-scaffold.md  FID-2026-07-13-006-v2-soul-manifest-and-workspace-scaffold.md  FID-2026-07-13-006-v3-soul-builder.md  FID-2026-07-13-009-manifest-quality-fix.md  FID-2026-07-13-010-streaming-soul-generation.md  FID-2026-07-13-012-per-section-rating-breakdown.md  FID-2026-07-13-013-swarm-preview-diff.md  FID-2026-07-13-014-regenerate-button.md  FID-2026-07-13-015-happy-dom-localstorage.md
dev/session-summaries/: 2026-07-13-v0.0.3-release.md  2026-07-13-v0.0.4-release.md  2026-07-14-v0.0.5-release.md  2026-07-15-2030-handoff-cli-relaunch.md
e2e/: auto-derived.spec.ts
public/: sw.js
public/favicon/: site.webmanifest
scripts/: archive-fids.sh  bump-version.sh  clean-bloat.sh  commit-with-message.sh  lint-defer.sh  lint-docs.sh  refresh-readme.sh  release-check.sh  release-prep.sh  release.py  sync-agents.py  tag-with-message.sh  verify-fix.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/inference/: openrouter.rs
src-tauri/src/security/: master_key.rs  mod.rs
src-tauri/src/skills/: mod.rs
src-tauri/tests/: inference_smoke_test.rs  master_key_test.rs  skill_execution_smoke_test.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/env/: route.ts
src/app/browser/: page.tsx
src/app/changelog/: page.tsx
src/app/chat/: page.tsx
src/app/evolution/: page.tsx
src/app/faq/: page.tsx
src/app/health/: page.tsx
src/app/icons/: page.tsx
src/app/inference/: page.tsx
src/app/manifest/: page.tsx
src/app/marketplace/: page.tsx
src/app/master-key/: page.tsx
src/app/mcp/: page.tsx
src/app/settings/: page.tsx
src/app/tune/: page.tsx
src/components/: InferenceSmokeTest.tsx  MasterKeySetup.tsx  bulk-diff-viewer.tsx  dashboard-shell.tsx  rating-box.tsx  section-rating-card.tsx  soul-body-viewer.test.tsx  soul-body-viewer.tsx
src/components/icons/: accessibility-icon.tsx  airplane-icon.tsx  alarm-clock-plus-icon.tsx  align-center-icon.tsx  align-vertical-space-around-icon.tsx  ambulance-icon.tsx  ampersand-icon.tsx  angry-icon.tsx  annoyed-icon.tsx  apple-brand-logo.tsx  arrow-back-icon.tsx  arrow-back-up-icon.tsx  arrow-big-down-dash-icon.tsx  arrow-big-down-icon.tsx  arrow-big-left-dash-icon.tsx  arrow-big-left-icon.tsx  arrow-big-right-dash-icon.tsx  arrow-big-right-icon.tsx  arrow-big-up-dash-icon.tsx  arrow-big-up-icon.tsx  arrow-down-0-1-icon.tsx  arrow-down-1-0-icon.tsx  arrow-down-a-z-icon.tsx  arrow-narrow-down-dashed-icon.tsx  arrow-narrow-down-icon.tsx  arrow-narrow-left-dashed-icon.tsx  arrow-narrow-left-icon.tsx  arrow-narrow-right-dashed-icon.tsx  arrow-narrow-right-icon.tsx  arrow-narrow-up-dashed-icon.tsx  arrow-narrow-up-icon.tsx  at-sign-icon.tsx  banana-icon.tsx  battery-charging-icon.tsx  battery-icon.tsx  battery-pause-icon.tsx  bell-off-icon.tsx  bluetooth-connected-icon.tsx  book-icon.tsx  bookmark-icon.tsx  (+227 more)
src/lib/: format-relative-time.ts  ids.ts  ipc.test.ts  ipc.ts  logger.test.ts  logger.ts  manifest-mock.test.ts  manifest-mock.ts  mock-ipc.ts  name-generator.test.ts  name-generator.ts  prompt-generator.test.ts  prompt-generator.ts  soul-generation-system-prompt.ts  soul.ts  swarm-diff.test.ts  swarm-diff.ts
src/lib/hooks/: use-derived-rotation.ts  use-loaded-config.ts
src/types/: control-frames.ts  raw.d.ts
workspace-savant/: AGENTS.md  LEARNINGS.md  SOUL.md
