[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/core",
    "crates/gateway",
    "crates/agent",
    "crates/skills",
    "crates/mcp",
    "crates/channels",
    "crates/canvas",
    "crates/cognitive",
    "crates/ipc",
    "crates/memory",
    "crates/dream",
    "crates/panopticon",
    "crates/obsidian",
    "crates/integrations",
    "crates/security",
    "crates/sandbox",
    "crates/vault",
    "crates/echo",
    "crates/browser",
    "crates/toolforge",
    "crates/generation",    "crates/schema",
    "crates/cli",
]  

[workspace.package]
version = "0.0.8"
edition = "2021"
license = "Apache-2.0"
authors = ["Spencer — Vera (agent, codebuff/minimax-m3)"]
rust-version = "1.86"
description = "Savant AI desktop shell (Renderer-first rebuild, Rust core restored)"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

# FID-036 anchor — see dev/fids/FID-2026-07-15-036-clippy-policy-refinement.md
# Note: workspace-level `[workspace.lints.clippy]` entries LIVE in `clippy.toml`
# (not here). Cargo's `[workspace.lints.clippy]` table accepts `level` for clippy
# lints but DOES NOT process `except-cfg` (Rust 1.81+ lint-table-cfg for `except-cfg`
# works for `[lints.rust]` only). Empirically (this FID cycle): every crate emitted
# `warning: unused manifest key: lints.clippy.expect_used.except-cfg` when the
# `except-cfg = ["test"]` syntax was placed here. The correct home is
# `clippy.toml::[lints.clippy]` with the `allow-in-test = true` subkey (added
# in clippy 0.1.78; the project has clippy 0.1.94).

[workspace.dependencies]
# Serialization, async, errors
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
rusqlite = { version = "0.38.0", features = ["chrono"] }
futures = "0.3"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws", "macros"] }

# CortexaDB + vector + zero-copy
cortexadb-core = { path = "lib/cortexadb/crates/cortexadb-core" }
rkyv = { version = "0.8.15", features = ["bytecheck", "little_endian", "unaligned"] }
ruvector-core = "2.0.5"
bytecheck = "0.8.0"
rend = "0.5"
half = { version = "2.7", features = ["rand_distr"] }

# Inter-crate paths (savant-* — savant_cli_* removed since we dropped crates/cli/)
savant_memory = { path = "crates/memory" }
savant_dream = { path = "crates/dream" }
savant_core = { path = "crates/core" }
savant_gateway = { path = "crates/gateway" }
savant_skills = { path = "crates/skills" }
savant_echo = { path = "crates/echo" }
savant_cognitive = { path = "crates/cognitive" }
savant_ipc = { path = "crates/ipc" }
savant_agent = { path = "crates/agent" }
savant_mcp = { path = "crates/mcp" }
savant_security = { path = "crates/security" }
savant_sandbox = { path = "crates/sandbox" }
savant_vault = { path = "crates/vault" }
savant_channels = { path = "crates/channels" }
savant_canvas = { path = "crates/canvas" }
savant_panopticon = { path = "crates/panopticon" }
savant_integrations = { path = "crates/integrations" }
savant_generation = { path = "crates/generation" }
savant_browser = { path = "crates/browser" }
savant_toolforge = { path = "crates/toolforge" }
savant_obsidian = { path = "crates/obsidian" }
# REMOVED from savant-backup (crates/cli/* not in new workspace):
# savant_cli_gateway = { path = "crates/cli/crates/gateway" }
# savant_cli_tui = { path = "crates/cli/crates/tui" }
# savant_cli_session = { path = "crates/cli/crates/session" }
# savant_cli_core = { path = "crates/cli/crates/core" }

# Hashing + data structures
blake3 = "1.5"
dashmap = "6.1.0"
libc = "0.2"
num_cpus = "1.16"
lru = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
backoff = { version = "0.4", features = ["tokio"] }
zstd = "0.13"
kani = "0.45"

# Zero-Copy IPC (Atlas Step 4)
iceoryx2 = "0.8"
iceoryx2-bb = "0.8"
wasmtime = "36.0.0"
wasmtime-wasi = { version = "36.0.0", features = ["preview1"] }

# Cognitive Acceleration (Atlas Step 4)
ndarray = "0.15"
candle-core = "0.8.0"
candle-nn = "0.8.0"

# Utility
ctrlc = "3.4"
clap = { version = "4", features = ["derive"] }
webbrowser = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22"
hex = "0.4"
rand = "0.8"
base64 = "0.22"
dirs = "5.0"
strsim = "0.11"
similar = "2.7"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
ratatui = { version = "0.29", features = ["crossterm", "macros"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tuirealm = "4.1"
tui-realm-stdlib = "4.1"

# GUI (Tauri 2)
tauri = { version = "2", features = [] }
tauri-build = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
portable-pty = "0.9"
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
globset = "0.4"
shared_child = "1"
keyring = { version = "3.6", features = ["windows-native"] }

# Phase 5 r3 — Unix at-rest vault encryption (keyring + AES-256-GCM).
# On Unix, the vault file is encrypted with a random 256-bit key stored in
# the OS credential service (libsecret via Secret Service D-Bus on Linux,
# Keychain on macOS); the key is fetched at runtime to decrypt.
# The `aes-gcm` crate is a pure-Rust RustCrypto AEAD cipher (well-audited,
# no unsafe in the safe API, hardware-accelerated on modern CPUs).
aes-gcm = "0.10"

# Windows API (for Job Object sandboxing)
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",
]}

# Current Savant additions (not in savant-backup's [workspace.dependencies])
# Required by the current src-tauri/ host which we are keeping.
dotenvy = "0.15"
ed25519-dalek = { version = "2", features = ["rand_core"] }
schemars = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
