[package]
name = "savant"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Savant AI desktop shell (Renderer-first rebuild, Rust core pending)"
readme = "../README.md"

[lib]
name = "savant_shell"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "savant"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

# Note: ed25519-dalek, rand, hex, uuid moved to `savant-vault` (FID-019) —
# they were only used by master_key.rs, which now lives in its own
# workspace crate. thiserror stays here — it's used by the inference
# module's InferenceError. `dotenvy` was removed in FID-019r2 (assumed
# dead) and re-added in FID-020 + FID-020r2 — `dotenvy::dotenv().ok();`
# is called at the top of `savant_shell::run()` to wire the vault's
# strategy 2 (cwd `.env`); the `pub fn load_env_from_exe_dir` helper
# (called with `&std::env::current_exe()` in `run()`) wires strategy 3
# (exe-dir `.env`). **See [`crates/vault/src/master_key.rs`](crates/vault/src/master_key.rs) (cascade
# docstring "Precedence & `.env` loading" paragraph) for the cwd-FIRST
# `.env` precedence rationale** — kept out of this comment to avoid
# duplication.
chrono = { workspace = true }
dotenvy = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# FID-019 — Vault moved to its own workspace crate (savant-vault).
# The IPC surface here just re-exports the vault API.
savant_vault = { workspace = true }

# FID-017 — Inner monologue wiring (savant_agent)
savant_agent = { workspace = true }
savant_core = { workspace = true }
tokio-util = { workspace = true }

# FID-025 — Skills + sandbox IPC surface (v0.0.6 feature batch).
# Wire savant_skills (WASM runtime + Docker executor) + savant_sandbox
# (OS-level process isolation via landlock + seccomp + JobObjects)
# to the renderer via 5 new Tauri commands. Pure consumer-side wiring
# (no code changes inside the underlying crates — per the FID-019 vault
# stabilization precedent: declare-deps → adapter-mod → commands → test).
savant_skills = { workspace = true }
savant_sandbox = { workspace = true }

# uuid is used by the FID-025 IPC adapter (ExecutionHandle::execution_id)
# and the cancel_skill_execution command's Uuid::parse_str call.
uuid = { workspace = true }

# Note: schemars is reserved for Phase 2 specta bindings; not pulled in Phase 1.

# Note: the per-platform `keyring` deps live in the `savant-vault` crate now
# (FID-019). src-tauri/ is a thin IPC shell that re-exports the vault API.

# Note: the dev-dependencies (tempfile, tokio-test, mockito) previously
# listed here were all dead — the only tests that used them lived in
# `tests/master_key_test.rs` (moved to `crates/vault/tests/` in FID-019).
# `tempfile` is now in `crates/vault/Cargo.toml [dev-dependencies]`.
