[package]
name = "savant_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Savant CLI runtime host (FID-030 Layer 2 Strangler-Fig migration — ZeroClaw pattern: in-process gateway + dashboard orchestration)"
readme = "README.md"

[lib]
name = "savant_cli"
path = "src/lib.rs"

# §Step 2: bin name is `savant` per FID-030 spec verbatim. §Step 1 used
# `savant-cli`; the spec's §Subcommand Tree example derives a `Cli` struct
# with `#[command(name = "savant", ...)]`, and the §Steps section §Step 13
# smoke test confirms `cargo run --bin savant --help` is the canonical
# invocation. `pnpm savant` (added at §Step 6 per spec §Impact Assessment)
# will use `cargo run --bin savant --`.
[[bin]]
name = "savant"
path = "src/main.rs"

[dependencies]
# FID-030 §Step 2 still uses ONLY workspace-inherited deps per LESSON-038
# (no-unilateral-defer) + LESSON-062 (path discipline). Each new
# dependency lands in the §Step that actually needs it:
#   - clap (parser) — wired at §Step 1
#   - thiserror (typed errors) — wired at §Step 1
#   - tracing (observability; tracing-subscriber init lands in §Step 4)
#   - tokio (async runtime + tokio::spawn for in-process gateway) — landed
#     via `[workspace.dependencies].tokio` (already present); crate-level
#     re-declaration comes in §Step 4
#   - webbrowser — wired at §Step 7 (browser orchestration)
#   - ctrlc — already a workspace dep; crate-level use at §Step 5
#   - nix (Unix signals) — wired at §Step 5 + §Step 12
clap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# §Step 4: tokio for the runtime host (process spawn + net probes +
# signal handling). Workspace `tokio = { version = "1.0", features =
# ["full"] }` includes `process`, `net`, `signal` (incl
# `tokio::signal::ctrl_c`).
tokio = { workspace = true }

# §Step 4: webbrowser for the dev-mode browser launch (spec §Step 10).
# Cross-platform via v0.8: Windows=ShellExecute, macOS=`open`, Linux=`xdg-open`.
webbrowser = "0.8"
